# Gecko

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gg.html
.github/workflows/: blank.yml
include/KHR/: khrplatform.h
include/camera/: orbit_camera.hpp
include/common/: helper_macros.hpp
include/geometry/: vector.hpp
include/glad/: glad.h
include/glutils/: glutils.hpp  program.hpp  shader.hpp  utils.hpp
include/scalar_field/: scalar_field.hpp
shaders/: base.frag  base.vert  volume_render.frag  volume_render.vert
source/: main.cpp
source/camera/: orbit_camera.cpp
source/glad/: glad.c
source/glutils/: glutils.cpp  program.cpp  shader.cpp  utils.cpp
